README dosyasina isim bilgisi eklendi

--- a/genetikAlgoritma_optimizasyon.ipynb
+++ b/genetikAlgoritma_optimizasyon.ipynb
@@ -4,6 +4,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## ÖMER TAŞKIN \n",
+        "## 2212721023     \n",
+        "## https://github.com/omertkn1/nakliye-rotasi-optimizasyon"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Genetik Algoritma ile Nakliye Rotası Optimizasyonu\n",
         "\n",
         "## Senaryo 3: Nakliye Rotasında Yakıt ve Zaman Dengesi\n",
@@ -68,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -87,8 +96,8 @@
       ],
       "source": [
         "# Değişken sınırları\n",
-        "X1_MIN, X1_MAX = 40, 100  # Ortalama hız (km/h)\n",
-        "X2_MIN, X2_MAX = 2, 10     # Araç yük kapasitesi (ton)\n",
+        "X1_MIN, X1_MAX = 40, 100  # Ortalama hız \n",
+        "X2_MIN, X2_MAX = 2, 10     # Araç yük kapasitesi\n",
         "\n",
         "# Kısıtlar\n",
         "MOTOR_GUC_LIMIT = 700  # x1 * x2 <= 700\n",
@@ -162,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -181,12 +190,12 @@
       ],
       "source": [
         "# Genetik algoritma parametreleri\n",
-        "POPULASYON_BOYUTU = 50      # Popülasyondaki birey sayısı\n",
-        "MAX_NESIL = 100             # Maksimum nesil sayısı\n",
-        "CROSSOVER_ORANI = 0.8       # Çaprazlama olasılığı\n",
-        "MUTASYON_ORANI = 0.1        # Mutasyon olasılığı\n",
-        "TURNUVA_BOYUTU = 3          # Turnuva seçilimi için turnuva boyutu\n",
-        "ELITIZM_SAYISI = 2          # Her nesilde korunacak en iyi birey sayısı\n",
+        "POPULASYON_BOYUTU = 50      \n",
+        "MAX_NESIL = 100             \n",
+        "CROSSOVER_ORANI = 0.8       \n",
+        "MUTASYON_ORANI = 0.1        \n",
+        "TURNUVA_BOYUTU = 3          \n",
+        "ELITIZM_SAYISI = 2          \n",
         "\n",
         "print(f\"Genetik Algoritma Parametreleri:\")\n",
         "print(f\"Popülasyon Boyutu: {POPULASYON_BOYUTU}\")\n",
@@ -206,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -225,20 +234,19 @@
         "    \"\"\"\n",
         "    def __init__(self, x1=None, x2=None):\n",
         "        if x1 is None:\n",
-        "            # Rastgele başlangıç değerleri (kısıtlar içinde)\n",
-        "            # x1 >= 60 kısıtını sağlayacak şekilde\n",
+        "            \n",
         "            self.x1 = random.uniform(max(X1_MIN, MIN_HIZ), X1_MAX)\n",
-        "            # x2 değeri, x1 ile birlikte motor gücü kısıtını sağlamalı\n",
+        "\n",
         "            max_x2 = min(X2_MAX, MOTOR_GUC_LIMIT / self.x1)\n",
         "            self.x2 = random.uniform(X2_MIN, max_x2)\n",
         "        else:\n",
         "            self.x1 = x1\n",
         "            self.x2 = x2\n",
         "        \n",
-        "        # Kısıtları sağlamayan bireyleri düzelt\n",
+        "        # Kısıtları sağlamayan bireyler\n",
         "        self.duzelt()\n",
         "        \n",
-        "        # Fitness değerini hesapla\n",
+        "        # Fitness değeri\n",
         "        self.fitness = self.fitness_hesapla()\n",
         "    \n",
         "    def duzelt(self):\n",
